name:                HELP
version:             0.1.0.0
synopsis:            The Handy Haskell Enterprise Logging Platform
description:
    The Handy Haskell Enterprise Logging Platform is my response to dependency-heavy, often slow, or generally non-intuitive log storage and search solutions. Begun as a graduate research project required for the completion of my Master's degree in Software Engineering at Embry-Riddle Aeronautical University, HELP seeks to provide a simple "plug-and-play" logging platform which, with the installation of only a database and the HELP binary, will allow systems administrators to collect, archive, and search logs with a convenient web-based, content-aware interface. Specific goals of the project include high-throughput logging through TCP and UDP sockets and a "manager-friendly" search interface.
license:             BSD3
license-file:        LICENSE
author:              Elliot Robinson
maintainer:          elliot.robinson@argiopetech.com
copyright:           2013
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable help
  main-is:             Main.hs
  extensions:          LambdaCase, NoImplicitPrelude, UnicodeSyntax
  other-modules:       Help.UI
                       Help.Imports
                       Help.Settings
                       Help.Logging
                       Help.Logging.Receive
                       Help.Logging.Store
                       Help.Logging.Parse
                       Help.UI.AdminConsole.Internal
                       Help.UI.WebSearch.Internal
                       Help.UI.WebSearch
                       Help.UI.AdminConsole

  build-depends:       base >= 4.6
                     , classy-prelude >= 0.5
                     , threads >= 0.5
                     , stm >= 2.4
                     , base-unicode-symbols >= 0.2
                     , lens >= 3.6
                     , ekg >= 0.3
                     , text >= 0.11
                     , options >= 0.1
                     , yaml-config >= 0.0.1
                     , mongoDB >= 1.3
                     , bytestring >= 0.10
                     , transformers >= 0.3
                     , conduit >= 1.0.4
                     , attoparsec-conduit >= 1.0
                     , attoparsec >= 0.10.4
                     , network-conduit >= 1.0
                     , aeson >= 0.6.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

Test-Suite test-help
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        test-help.hs
  extensions:     LambdaCase, NoImplicitPrelude, UnicodeSyntax
  build-depends:  base >= 4.6
                , classy-prelude >= 0.5
                , hspec >= 1.5
                , QuickCheck >= 2.5
  ghc-options: -Wall -threaded -with-rtsopts=-N

Benchmark bench-help
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        bench-main.hs
  extensions:     LambdaCase, NoImplicitPrelude, UnicodeSyntax
  build-depends:  base >= 4.6
                , classy-prelude >= 0.5
                , criterion >= 0.6
  ghc-options: -Wall -threaded -with-rtsopts=-N
